calendar save and list completed